fix gap

--- a/css/main.css
+++ b/css/main.css
@@ -657,17 +657,19 @@ header .headOne .dropdown i{
 .Statistics{
   margin: 3rem 0 5rem 0;
   width: 100%;
-  padding: 3rem 0;
+  padding: 2rem 0;
   background-color: var(--primary-100);
 }
 .Statistics .num_text h2{
   font-size: 50px;
   font-weight: normal;
   color: var(--text-300);
+  margin: 1rem 0 0;
 }
 .Statistics .num_text h3{
   font-weight: 600;
   color: var(--text-100);
+  margin: 0 0 1rem;
 }
 
 /* !Stick */
